# Skillbox_31

./: CMakeLists.txt  README.md
include/: IGraph.h  ListGraph.h  MatrixGraph.h  Toy.h  shared_ptr_toy.h  solutions.h
src/: CMakeLists.txt  IGraph.cpp  ListGraph.cpp  MatrixGraph.cpp  Toy.cpp  main.cpp  shared_ptr_toy.cpp  solution_1.cpp  solution_2.cpp  solution_2_list.cpp  solution_2_matrix.cpp
